<?xml version="1.0" encoding="utf-8"?>
<resources>
<<<<<<< HEAD
    <string name="action_settings">settings</string>
    <string name="add_new_food">add new food item</string>
    <string name="app_name">swolemate</string>
    <string name="cardio">cardio</string>
    <string name="custom">custom</string>
    <string name="strength">strength</string>
    <string name="new_meal">new meal</string>
    <string name="new_workout">new workout</string>
    <string name="save_workout">save workout</string>
    <string name="create_new_workout">create new workout</string>
    <string name="enter_info_request">please enter some basic information below:</string>
    <string name="privacy_disclaimer">swolemate won\'t collect any of this data; it is purely for your own personal app experience.</string>
    <string name="finish">finish</string>
    <string name="open">open</string>
    <string name="delete">delete</string>
    <string name="show">show</string>
    <string name="sort">sort</string>
    <string name="type">type</string>
    <string name="create">create</string>
    <string name="hello_user">hello, user</string>
    <string name="workout_name">workout name</string>
    <string name="other">other</string>
    <string name="strength_workout">strength Workout</string>
    <string name="user_name">daniel</string>
=======
    <string name="action_settings">Settings</string>
    <string name="add_new_food">Add new food item</string>
    <string name="aerobic_workout">Aerobic Workout</string>
    <string name="app_name">SwoleMate</string>
    <string name="cardio">Cardio</string>
    <string name="create_new_workout">Create new workout</string>
    <string name="enter_info_request">Please enter some basic information below:</string>
    <string name="finish">Finish</string>
    <string name="foodItem">Food Item</string>
    <string name="hello_user"></string>
    <string name="workout_name">Workout Name</string>
    <string name="other">Other</string>
    <string name="strength">Strength</string>
    <string name="strength_workout">Strength Workout</string>
    <string name="user_name">Daniel</string>
>>>>>>> daniel
    <string name="user_height">5&quot; 10&apos;</string>
    <string name="user_weight">185</string>
    <string name="view_eating_habits">view eating habits</string>
    <string name="view_workout_history">view past workouts</string>
    <string name="welcome">hello and welcome!</string>
    <string name="unit_switch">app Units</string>
    <string name="hello_world">hello world!</string>

    <string name="title_activity_first_time">New user</string>
    <string name="title_activity_main">Main menu</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_history_tracking">History</string>
    <string name="title_activity_meal_entry">Meal entry</string>
    <string name="title_activity_strength_workout">Strength Workout</string>
    <string name="title_activity_cardio_workout">Cardio Workout</string>
    <string name="title_activity_custom_workout">Custom Workout</string>

    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>

</resources>
