<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <edu.up.swolemate.FontTextView
        android:id="@+id/userGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textSize="@dimen/title_text_size"/>

    <edu.up.swolemate.FontButton
        android:id="@+id/viewWorkoutHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:text="@string/view_workout_history"
        android:background="#aaaaaa"
        android:textColor="#ffffff"
        android:gravity="bottom|right"
        android:onClick="onViewHistoryClick"/>

    <edu.up.swolemate.FontButton
        android:id="@+id/viewFoodHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:background="#bbbbbb"
        android:textColor="#ffffff"
        android:text="@string/view_eating_habits"
        android:gravity="bottom|left"/>

    <edu.up.swolemate.FontButton
        android:id="@+id/createNewWorkoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:background="#cccccc"
        android:textColor="#ffffff"
        android:text="@string/create_new_workout"
        android:onClick="onCreateWorkoutClick"
        android:gravity="bottom|right"/>

    <edu.up.swolemate.FontButton
        android:id="@+id/addNewFoodButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:background="#dddddd"
        android:textColor="#ffffff"
        android:text="@string/add_new_food"
        android:onClick="onAddFoodClick"
        android:gravity="bottom|left"/>

</LinearLayout>