<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <edu.up.swolemate.FontButton
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/strength"
            android:background="#aaaaaa"
            android:textColor="#ffffff"
            android:id="@+id/btn_choose_strength" />

        <edu.up.swolemate.FontButton
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/cardio"
            android:background="#bbbbbb"
            android:textColor="#ffffff"
            android:id="@+id/btn_choose_cardio" />

        <edu.up.swolemate.FontButton
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/custom"
            android:background="#cccccc"
            android:textColor="#ffffff"
            android:id="@+id/btn_choose_custom" />

    </LinearLayout>


</LinearLayout>